generator client {
  provider = "prisma-client-js"
  output   = "../lib/generated/prisma"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
  schemas   = ["public"]
}

model User {
  id_user             String               @id @db.Uuid
  nom                 String
  prenom              String
  email               String               @unique
  telephone           String               @unique
  photo_de_profil     String?
  date_creation       DateTime             @default(now())
  date_mise_a_jour    DateTime             @updatedAt
  historiques_masques HistoriqueMasque[]
  invitations_creees  InvitationGroupe[]   @relation("user_invitations_creees")
  memberships         MembreGroupe[]
  notifications       NotificationGroupe[]

  @@map("users")
  @@schema("public")
}

model HistoriqueMasque {
  id_masquage   String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_user       String   @db.Uuid
  scope         String
  target_id     String
  date_masquage DateTime @default(now())
  user          User     @relation(fields: [id_user], references: [id_user], onDelete: Cascade)

  @@unique([id_user, scope, target_id])
  @@index([id_user])
  @@index([scope, target_id])
  @@map("historiques_masques")
  @@schema("public")
}

model Groupes {
  id_groupe                 String                 @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  nom                       String
  description               String?
  devise                    String                 @default("XAF")
  lien_invitation           String?                @unique
  date_de_creation          DateTime               @default(now())
  date_mise_a_jour          DateTime               @updatedAt
  caisses_financieres       CaisseFinanciere[]
  comptes_epargne           CompteEpargne[]
  cycles                    CycleTontine[]
  invitations               InvitationGroupe[]
  membres                   MembreGroupe[]
  mouvements_epargne        MouvementEpargne[]
  mouvements_financiers     MouvementFinancier[]
  notifications             NotificationGroupe[]
  retraits                  Retrait[]
  retraits_amendes_reunions RetraitAmendeReunion[]
  reunions                  Reunion[]
  rubriques_cotisation      RubriqueCotisation[]

  @@map("groupes")
  @@schema("public")
}

model RubriqueCotisation {
  id_rubrique         String                 @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  nom                 String
  montant_fixe        Decimal                @db.Decimal(15, 2)
  duree               String?
  est_obligatoire     Boolean                @default(true)
  id_groupe           String                 @db.Uuid
  date_creation       DateTime               @default(now())
  date_limite         DateTime?
  type_rubrique       TypeRubriqueCotisation @default(PONCTUELLE)
  frequence           FrequenceRubrique      @default(MENSUEL)
  date_debut          DateTime               @default(now())
  date_fin            DateTime?
  duree_jours         Int                    @default(1)
  caisses_financieres CaisseFinanciere[]
  membres_concernes   MembreRubrique[]
  paiements           PaiementRubrique[]
  retraits            Retrait[]
  groupe              Groupes                @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)

  @@index([id_groupe])
  @@map("rubriques_cotisation")
  @@schema("public")
}

model MembreRubrique {
  id_membre_rubrique String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_rubrique        String             @db.Uuid
  id_membre_groupe   String             @db.Uuid
  membre             MembreGroupe       @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)
  rubrique           RubriqueCotisation @relation(fields: [id_rubrique], references: [id_rubrique], onDelete: Cascade)

  @@unique([id_rubrique, id_membre_groupe])
  @@map("membres_rubrique")
  @@schema("public")
}

model PaiementRubrique {
  id_paiement      String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_rubrique      String             @db.Uuid
  id_membre_groupe String             @db.Uuid
  montant_paye     Decimal            @db.Decimal(15, 2)
  date_paiement    DateTime           @default(now())
  note             String?
  membre           MembreGroupe       @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)
  rubrique         RubriqueCotisation @relation(fields: [id_rubrique], references: [id_rubrique], onDelete: Cascade)

  @@index([id_rubrique])
  @@index([id_membre_groupe])
  @@map("paiements_rubrique")
  @@schema("public")
}

model Retrait {
  id_retrait        String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  montant           Decimal             @db.Decimal(15, 2)
  motif             String
  date_retrait      DateTime            @default(now())
  id_groupe         String              @db.Uuid
  id_admin_valideur String              @db.Uuid
  id_rubrique       String?             @db.Uuid
  valideur          MembreGroupe        @relation("retraits_valides", fields: [id_admin_valideur], references: [id_membre_groupe])
  groupe            Groupes             @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  rubrique          RubriqueCotisation? @relation(fields: [id_rubrique], references: [id_rubrique])

  @@index([id_groupe])
  @@map("retraits")
  @@schema("public")
}

model InvitationGroupe {
  id_invitation    String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  code             String    @unique
  date_creation    DateTime  @default(now())
  date_revocation  DateTime?
  id_groupe        String    @db.Uuid
  id_user_createur String?   @db.Uuid
  groupe           Groupes   @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  createur         User?     @relation("user_invitations_creees", fields: [id_user_createur], references: [id_user])

  @@index([id_groupe])
  @@map("invitations_groupe")
  @@schema("public")
}

model MembreGroupe {
  id_membre_groupe          String                 @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  role                      RoleGroupe             @default(MEMBRE)
  statut_adhesion           StatutAdhesion         @default(ACTIF)
  date_adhesion             DateTime               @default(now())
  date_depart               DateTime?
  statut_visuel             StatutVisuel           @default(VERT)
  id_user                   String                 @db.Uuid
  id_groupe                 String                 @db.Uuid
  cotisations               Cotisations[]
  cycles_participations     CycleParticipant[]
  echanges_cibles           DemandeEchange[]       @relation("echanges_cibles")
  echanges_demandes         DemandeEchange[]       @relation("echanges_demandes")
  groupe                    Groupes                @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  user                      User                   @relation(fields: [id_user], references: [id_user], onDelete: Cascade)
  membres_rubriques         MembreRubrique[]
  compte_epargne            CompteEpargne?
  epargne_mouvements        MouvementEpargne[]
  epargne_mouvements_operes MouvementEpargne[]     @relation("epargne_mouvements_operateur")
  epargne_signalements      SignalementEpargne[]
  mouvements_crees          MouvementFinancier[]   @relation("mouvements_financiers_admin")
  mouvements_concernes      MouvementFinancier[]   @relation("mouvements_financiers_concernes")
  paiements_rubriques       PaiementRubrique[]
  penalites                 Penalite[]
  presences_reunions        PresenceReunion[]
  retraits_valides          Retrait[]              @relation("retraits_valides")
  retraits_amendes_reunions RetraitAmendeReunion[] @relation("retraits_amendes_reunions")
  retraits_penalites        RetraitPenalite[]      @relation("retraits_penalites_valides")
  versements_effectues      Versement[]            @relation("versements_effectues")
  versements_recus          Versement[]            @relation("versements_recus")

  @@unique([id_user, id_groupe])
  @@index([id_groupe])
  @@index([id_user])
  @@map("membres_groupe")
  @@schema("public")
}

model CycleTontine {
  id_cycle            String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  nom_cycle           String
  date_debut          DateTime           @default(now())
  date_fin            DateTime
  duree_tour_de_gain  Int
  ordre_beneficiaire  String?
  id_groupe           String             @db.Uuid
  montant_cotisation  Decimal            @db.Decimal(15, 2)
  penalites_activees  Boolean            @default(false)
  mode_penalite       ModePenalite?
  valeur_penalite     Decimal?           @db.Decimal(15, 2)
  caisses_financieres CaisseFinanciere[]
  cotisations         Cotisations[]
  participants        CycleParticipant[]
  groupe              Groupes            @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  demandes_echange    DemandeEchange[]
  retraits_penalites  RetraitPenalite[]
  versements          Versement[]

  @@index([id_groupe])
  @@map("cycles_tontine")
  @@schema("public")
}

model RetraitPenalite {
  id_retrait_penalite String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  montant             Decimal      @db.Decimal(15, 2)
  motif               String
  numero_tour         Int?
  date_retrait        DateTime     @default(now())
  id_cycle            String       @db.Uuid
  id_admin_valideur   String       @db.Uuid
  valideur            MembreGroupe @relation("retraits_penalites_valides", fields: [id_admin_valideur], references: [id_membre_groupe])
  cycle               CycleTontine @relation(fields: [id_cycle], references: [id_cycle], onDelete: Cascade)

  @@index([id_cycle])
  @@index([id_admin_valideur])
  @@map("retraits_penalites")
  @@schema("public")
}

model CycleParticipant {
  id_cycle_participant String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  ordre                Int
  date_ajout           DateTime     @default(now())
  id_cycle             String       @db.Uuid
  id_membre_groupe     String       @db.Uuid
  cycle                CycleTontine @relation(fields: [id_cycle], references: [id_cycle], onDelete: Cascade)
  membre_groupe        MembreGroupe @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)

  @@unique([id_cycle, id_membre_groupe])
  @@index([id_cycle])
  @@index([id_membre_groupe])
  @@map("cycles_participants")
  @@schema("public")
}

model Cotisations {
  id_cotisation      String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  date_debut         DateTime
  montant            Decimal      @db.Decimal(15, 2)
  date_de_paiement   DateTime
  penalite_appliquee Boolean      @default(false)
  montant_penalite   Decimal?     @db.Decimal(15, 2)
  id_membre_groupe   String       @db.Uuid
  id_cycle           String       @db.Uuid
  numero_tour        Int?
  date_echeance      DateTime?
  penalite_collectee Boolean      @default(false)
  cycle              CycleTontine @relation(fields: [id_cycle], references: [id_cycle])
  membre_groupe      MembreGroupe @relation(fields: [id_membre_groupe], references: [id_membre_groupe])
  penalites          Penalite[]

  @@index([id_cycle])
  @@index([id_membre_groupe])
  @@map("cotisations")
  @@schema("public")
}

model Penalite {
  id_penalite              String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  montant_base             Decimal       @db.Decimal(15, 2)
  motif                    String
  taux_augmentation_heure  Decimal       @db.Decimal(5, 2)
  seuil_heure_augmentation Int
  date_application         DateTime
  montant_final            Decimal       @db.Decimal(15, 2)
  id_membre_groupe         String        @db.Uuid
  id_cotisation            String        @db.Uuid
  mode_penalite            ModePenalite?
  valeur_configuree        Decimal?      @db.Decimal(15, 2)
  jours_retard             Int?
  date_echeance            DateTime?
  cotisations              Cotisations   @relation(fields: [id_cotisation], references: [id_cotisation])
  membre_groupe            MembreGroupe  @relation(fields: [id_membre_groupe], references: [id_membre_groupe])

  @@index([id_membre_groupe])
  @@index([id_cotisation])
  @@map("penalites")
  @@schema("public")
}

model Versement {
  id_versement      String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_cycle          String         @db.Uuid
  id_beneficiaire   String         @db.Uuid
  numero_tour       Int
  montant_verse     Decimal        @db.Decimal(15, 2)
  date_versement    DateTime       @default(now())
  mode_versement    ModeVersement?
  reference_externe String?
  id_admin_valideur String         @db.Uuid
  valideur          MembreGroupe   @relation("versements_effectues", fields: [id_admin_valideur], references: [id_membre_groupe])
  beneficiaire      MembreGroupe   @relation("versements_recus", fields: [id_beneficiaire], references: [id_membre_groupe])
  cycle             CycleTontine   @relation(fields: [id_cycle], references: [id_cycle], onDelete: Cascade)

  @@index([id_cycle])
  @@index([id_beneficiaire])
  @@map("versements")
  @@schema("public")
}

model RetraitAmendeReunion {
  id_retrait_amende String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_groupe         String       @db.Uuid
  id_admin_valideur String       @db.Uuid
  montant           Decimal      @db.Decimal(15, 2)
  motif             String
  date_retrait      DateTime     @default(now())
  valideur          MembreGroupe @relation("retraits_amendes_reunions", fields: [id_admin_valideur], references: [id_membre_groupe])
  groupe            Groupes      @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)

  @@index([id_groupe])
  @@map("retraits_amendes_reunions")
  @@schema("public")
}

model CaisseFinanciere {
  id_caisse     String               @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_groupe     String               @db.Uuid
  type_caisse   TypeCaisseFinanciere
  nom           String
  reference_key String
  id_cycle      String?              @db.Uuid
  id_rubrique   String?              @db.Uuid
  solde_actuel  Decimal              @default(0) @db.Decimal(15, 2)
  date_creation DateTime             @default(now())
  cycle         CycleTontine?        @relation(fields: [id_cycle], references: [id_cycle], onDelete: Cascade)
  groupe        Groupes              @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  rubrique      RubriqueCotisation?  @relation(fields: [id_rubrique], references: [id_rubrique], onDelete: Cascade)
  mouvements    MouvementFinancier[]

  @@unique([id_groupe, type_caisse, reference_key])
  @@index([id_groupe])
  @@index([id_cycle])
  @@index([id_rubrique])
  @@map("caisses_financieres")
  @@schema("public")
}

model MouvementFinancier {
  id_mouvement       String                   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_groupe          String                   @db.Uuid
  id_caisse          String                   @db.Uuid
  type_mouvement     TypeMouvementFinancier
  source             SourceMouvementFinancier
  montant            Decimal                  @db.Decimal(15, 2)
  motif              String
  solde_avant        Decimal                  @db.Decimal(15, 2)
  solde_apres        Decimal                  @db.Decimal(15, 2)
  id_admin_createur  String?                  @db.Uuid
  id_membre_concerne String?                  @db.Uuid
  reference_type     String?
  reference_id       String?
  statut             StatutMouvementFinancier @default(VALIDE)
  date_mouvement     DateTime                 @default(now())
  admin_createur     MembreGroupe?            @relation("mouvements_financiers_admin", fields: [id_admin_createur], references: [id_membre_groupe])
  caisse             CaisseFinanciere         @relation(fields: [id_caisse], references: [id_caisse], onDelete: Cascade)
  groupe             Groupes                  @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  membre_concerne    MembreGroupe?            @relation("mouvements_financiers_concernes", fields: [id_membre_concerne], references: [id_membre_groupe])

  @@index([id_groupe, date_mouvement])
  @@index([id_caisse, date_mouvement])
  @@index([id_membre_concerne])
  @@index([source, reference_id])
  @@map("mouvements_financiers")
  @@schema("public")
}

model CompteEpargne {
  id_compte          String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  numero_compte      String              @unique
  id_groupe          String              @db.Uuid
  id_membre_groupe   String              @unique @db.Uuid
  solde_actuel       Decimal             @default(0) @db.Decimal(15, 2)
  statut             StatutCompteEpargne @default(ACTIF)
  date_ouverture     DateTime            @default(now())
  date_mise_a_jour   DateTime            @updatedAt
  groupe             Groupes             @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  membre             MembreGroupe        @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)
  mouvements         MouvementEpargne[]
  signalements       SignalementEpargne[]

  @@index([id_groupe])
  @@index([id_membre_groupe])
  @@map("comptes_epargne")
  @@schema("public")
}

model MouvementEpargne {
  id_mouvement       String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_compte          String             @db.Uuid
  id_groupe          String             @db.Uuid
  id_membre_groupe   String             @db.Uuid
  id_operateur       String?            @db.Uuid
  role_acteur        RoleActeurEpargne  @default(ADMIN)
  type_operation     TypeOperationEpargne
  montant            Decimal            @db.Decimal(15, 2)
  motif              String
  solde_avant        Decimal            @db.Decimal(15, 2)
  solde_apres        Decimal            @db.Decimal(15, 2)
  date_operation     DateTime           @default(now())
  compte             CompteEpargne      @relation(fields: [id_compte], references: [id_compte], onDelete: Cascade)
  groupe             Groupes            @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)
  membre             MembreGroupe       @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)
  operateur          MembreGroupe?      @relation("epargne_mouvements_operateur", fields: [id_operateur], references: [id_membre_groupe])
  signalements       SignalementEpargne[]

  @@index([id_compte, date_operation])
  @@index([id_groupe, date_operation])
  @@index([id_membre_groupe])
  @@index([id_operateur])
  @@map("mouvements_epargne")
  @@schema("public")
}

model SignalementEpargne {
  id_signalement     String              @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_compte          String              @db.Uuid
  id_mouvement       String              @db.Uuid
  id_membre_groupe   String              @db.Uuid
  motif              String
  statut             StatutSignalementEpargne @default(OUVERT)
  date_signalement   DateTime            @default(now())
  compte             CompteEpargne       @relation(fields: [id_compte], references: [id_compte], onDelete: Cascade)
  mouvement          MouvementEpargne    @relation(fields: [id_mouvement], references: [id_mouvement], onDelete: Cascade)
  membre             MembreGroupe        @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)

  @@index([id_compte])
  @@index([id_mouvement])
  @@index([id_membre_groupe])
  @@map("signalements_epargne")
  @@schema("public")
}

model Reunion {
  id_reunion       String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_groupe        String            @db.Uuid
  titre            String
  description      String?
  date_reunion     DateTime
  lieu             String?
  type_reunion     TypeReunion       @default(ORDINAIRE)
  statut           StatutReunion     @default(PLANIFIEE)
  montant_amende   Decimal?          @db.Decimal(15, 2)
  compte_rendu     String?
  date_creation    DateTime          @default(now())
  date_mise_a_jour DateTime          @default(now()) @updatedAt
  presences        PresenceReunion[]
  groupe           Groupes           @relation(fields: [id_groupe], references: [id_groupe], onDelete: Cascade)

  @@index([id_groupe])
  @@map("reunions")
  @@schema("public")
}

model PresenceReunion {
  id_presence         String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_reunion          String         @db.Uuid
  id_membre_groupe    String         @db.Uuid
  statut_presence     StatutPresence @default(ABSENT)
  amende_payee        Boolean        @default(false)
  note_absence        String?
  date_enregistrement DateTime       @default(now())
  membre_groupe       MembreGroupe   @relation(fields: [id_membre_groupe], references: [id_membre_groupe], onDelete: Cascade)
  reunion             Reunion        @relation(fields: [id_reunion], references: [id_reunion], onDelete: Cascade)

  @@unique([id_reunion, id_membre_groupe])
  @@index([id_reunion])
  @@index([id_membre_groupe])
  @@map("presences_reunion")
  @@schema("public")
}

model NotificationGroupe {
  id_notification   String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  type_notification String
  message           String
  date_creation     DateTime  @default(now())
  date_lecture      DateTime?
  id_user           String    @db.Uuid
  id_groupe         String?   @db.Uuid
  groupe            Groupes?  @relation(fields: [id_groupe], references: [id_groupe])
  user              User      @relation(fields: [id_user], references: [id_user], onDelete: Cascade)

  @@index([id_user])
  @@index([id_groupe])
  @@map("notifications_groupe")
  @@schema("public")
}

model DemandeEchange {
  id_demande     String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  id_cycle       String        @db.Uuid
  id_demandeur   String        @db.Uuid
  id_cible       String        @db.Uuid
  tour_demandeur Int
  tour_cible     Int
  statut         StatutEchange @default(EN_ATTENTE)
  note           String?
  date_demande   DateTime      @default(now())
  date_reponse   DateTime?
  cible          MembreGroupe  @relation("echanges_cibles", fields: [id_cible], references: [id_membre_groupe], onDelete: Cascade)
  cycle          CycleTontine  @relation(fields: [id_cycle], references: [id_cycle], onDelete: Cascade)
  demandeur      MembreGroupe  @relation("echanges_demandes", fields: [id_demandeur], references: [id_membre_groupe], onDelete: Cascade)

  @@index([id_cycle])
  @@index([id_demandeur])
  @@index([id_cible])
  @@map("demandes_echange")
  @@schema("public")
}

enum RoleGroupe {
  ADMIN
  MEMBRE

  @@schema("public")
}

enum StatutAdhesion {
  ACTIF
  INACTIF
  EN_ATTENTE

  @@schema("public")
}

enum StatutVisuel {
  VERT
  ORANGE
  ROUGE

  @@schema("public")
}

enum StatutCompteEpargne {
  ACTIF
  BLOQUE
  CLOTURE

  @@schema("public")
}

enum TypeOperationEpargne {
  DEPOT
  RETRAIT

  @@schema("public")
}

enum RoleActeurEpargne {
  ADMIN
  SYSTEME

  @@schema("public")
}

enum StatutSignalementEpargne {
  OUVERT
  TRAITE

  @@schema("public")
}

enum ModeVersement {
  VIREMENT
  ESPECES
  MOBILE_MONEY
  CHEQUE

  @@schema("public")
}

enum ModePenalite {
  FIXE
  POURCENTAGE
  PROGRESSIVE

  @@schema("public")
}

enum TypeRubriqueCotisation {
  PONCTUELLE
  RECURRENTE

  @@schema("public")
}

enum FrequenceRubrique {
  UNIQUE
  HEBDOMADAIRE
  MENSUEL
  TRIMESTRIEL
  ANNUEL

  @@schema("public")
}

enum TypeReunion {
  ORDINAIRE
  EXTRAORDINAIRE
  URGENCE

  @@schema("public")
}

enum StatutReunion {
  PLANIFIEE
  TERMINEE
  ANNULEE

  @@schema("public")
}

enum StatutPresence {
  PRESENT
  ABSENT
  EXCUSE
  DEMANDE_EXCUSE
  EN_RETARD

  @@schema("public")
}

enum TypeCaisseFinanciere {
  GENERALE
  CYCLE
  RUBRIQUE
  AMENDES_REUNION
  PENALITES_CYCLE

  @@schema("public")
}

enum TypeMouvementFinancier {
  ENTREE
  SORTIE
  CORRECTION

  @@schema("public")
}

enum SourceMouvementFinancier {
  COTISATION_CYCLE
  VERSEMENT_BENEFICIAIRE
  PAIEMENT_RUBRIQUE
  RETRAIT_RUBRIQUE
  AMENDE_REUNION
  RETRAIT_AMENDES_REUNION
  PENALITE_CYCLE
  RETRAIT_PENALITE_CYCLE
  RETRAIT_GENERAL
  VERSEMENT_POT

  @@schema("public")
}

enum StatutMouvementFinancier {
  VALIDE
  ANNULE

  @@schema("public")
}

enum StatutEchange {
  EN_ATTENTE
  ACCEPTEE_MEMBRES
  VALIDEE_ADMIN
  REFUSEE_CIBLE
  REFUSEE_ADMIN
  ANNULEE

  @@schema("public")
}
